--- a/src/App.css
+++ b/src/App.css
@@ -22,6 +22,13 @@
   color: #61dafb;
 }
 
+.footer {
+  margin: 40px 0px;
+  color:#666666;
+  text-align: center;
+  line-height: 2em;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
