--- a/src/styles/payment.css
+++ b/src/styles/payment.css
@@ -21,6 +21,10 @@
     border-radius: 10px;
 }
 
+.payment-option-box {
+    margin-top: 40px;
+}
+
 #pay-stripe {
     background: url('/pay-stripe.png') no-repeat center center;
 }
@@ -44,3 +48,30 @@
 #pay-paymaya {
     background: url('/pay-paymaya.png') no-repeat center center;
 }
+
+/**
+ * The CSS shown here will not be introduced in the Quickstart guide, but shows
+ * how you can use CSS to style your Element's container.
+ */
+ .StripeElement {
+    background-color: white;
+    height: 40px;
+    padding: 10px 12px;
+    border-radius: 4px;
+    border: 1px solid transparent;
+    box-shadow: 0 1px 3px 0 #e6ebf1;
+    -webkit-transition: box-shadow 150ms ease;
+    transition: box-shadow 150ms ease;
+  }
+  
+  .StripeElement--focus {
+    box-shadow: 0 1px 3px 0 #cfd7df;
+  }
+  
+  .StripeElement--invalid {
+    border-color: #fa755a;
+  }
+  
+  .StripeElement--webkit-autofill {
+    background-color: #fefde5 !important;
+  }
