--- a/src/App.css
+++ b/src/App.css
@@ -72,6 +72,13 @@ body {
   line-height: 2em;
 }
 
+.footer-img {
+  width: 255px;
+  height: 50px;
+  margin: 80px auto 30px;
+  background: url('/footer.png') no-repeat center center;
+}
+
 .banner {
   padding: 40px;
   background-color: #f7f7f7;
