--- a/src/styles/payment.css
+++ b/src/styles/payment.css
@@ -18,7 +18,7 @@
 .available {
     background-color: green;
     color: #FFFFFF;
-    border-radius: 50%;
+    border-radius: 10px;
     margin: 0px 25px 10px;
 }
 
