--- a/src/App.css
+++ b/src/App.css
@@ -131,6 +131,10 @@ body {
   margin: 60px auto -30px;
 }
 
+.borderless td, .borderless th {
+  border: none;
+}
+
 #first {
   background: url('/select.png') no-repeat center center;
 }
