Add Domain Panel functionalities

--- a/src/styles/domain_panel.css
+++ b/src/styles/domain_panel.css
@@ -26,3 +26,8 @@
     background-color: #5ACBF1;
     color:#ffffff;
 }
+
+.side-link-active {
+    background-color: #5ACBF1;
+    color:#ffffff;
+}
