--- a/src/styles/payment.css
+++ b/src/styles/payment.css
@@ -110,3 +110,27 @@
   .StripeElement--webkit-autofill {
     background-color: #fefde5 !important;
   }
+
+  /* Payment Modal Style */
+.modal-content {
+    border-radius: 20px;    
+}
+.modal-header {
+    padding: 20px 25px 0px;
+    border-bottom: 0px!important;
+}
+.modal-body {
+    padding: 0px!important;
+}
+.modal-body .well {
+    margin: 20px 40px;
+}
+@media (max-width: 470px) {
+    .modal-body .well {
+        margin: 20px 15px!important;
+    }
+}
+.modal-footer {
+    padding: 20px;
+    border-top: 0px!important;
+}
