--- a/src/styles/payment.css
+++ b/src/styles/payment.css
@@ -54,6 +54,22 @@
     background-color: #35ca5e;
 }
 
+.dragonpay-link {
+    display: inline-block;
+    margin: 20px auto;
+    background-color: #2ca94f;
+    color:#FFFFFF;
+    padding: 15px 20px;
+    font-weight: bold;
+    font-size: 120%;
+    border-radius: 10px;
+}
+
+.dragonpay-link:hover {
+    text-decoration: none;
+    color:#FFFFFF;
+    background-color: #35ca5e;
+}
 
 #pay-stripe {
     background: url('/pay-stripe.png') no-repeat center center;
@@ -120,10 +136,13 @@
     border-bottom: 0px!important;
 }
 .modal-body {
-    padding: 0px!important;
+    padding: 10px 45px!important;
 }
-.modal-body .well {
-    margin: 20px 40px;
+.modal-body .alert{
+    padding: 15px;
+    margin-bottom: 0px!important;
+    border: 1px solid transparent;
+    border-radius: 4px;
 }
 @media (max-width: 470px) {
     .modal-body .well {
