--- a/src/styles/payment.css
+++ b/src/styles/payment.css
@@ -138,6 +138,11 @@
 .modal-body {
     padding: 10px 45px!important;
 }
+@media (max-width: 580px){
+    .modal-body {
+        padding: 10px 15px!important;
+    }
+}
 .modal-body .alert{
     padding: 15px;
     margin-bottom: 0px!important;
@@ -146,7 +151,17 @@
 }
 @media (max-width: 470px) {
     .modal-body .well {
-        margin: 20px 15px!important;
+        margin: 20px 0px!important;
+    }
+}
+@media (max-width: 360px) {
+    .modal-body .well {
+        padding: 19px 10px!important;
+    }
+}
+@media (max-width: 335px) {
+    .modal-body {
+        padding: 10px 5px!important;
     }
 }
 .modal-footer {
