--- a/src/App.css
+++ b/src/App.css
@@ -21,27 +21,36 @@ body {
   text-align: right;
   vertical-align: middle;
 }
-.header .header-panel .dropdown{
+.dropdown{
   display: inline-block;
   margin-left: 10px;
 }
 
-.header .header-panel .dropdown img{
+ .dropdown img{
   height: 35px;
   cursor: pointer;
 }
-.header .header-panel .dropdown .dropdown-menu {
+.dropdown .dropdown-menu {
   left: -120px;
   margin: 10px 0 0;
   border-top: 4px solid #3F71D7!important;
 }
+@media (max-width: 767px){
+  .dropdown-menu {
+    left: -40px!important;
+  }
+  .dropdown-menu :before {
+    left: 1px!important;
+  }
+}
+
 .header .header-panel .dropdown .dropdown-menu li{
   margin: 10px 0px;
 }
 .header .header-panel .dropdown .dropdown-menu li a{
   cursor: pointer;
 }
-.header .header-panel .dropdown .dropdown-menu :before {
+.dropdown-menu :before {
   width: 0;
   height: 0;
   border-left: 10px solid transparent;
